<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/black"
    >

    <TextView
        android:id="@+id/tPing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tPingText"
        android:textColor="@color/gray"
         />

    <EditText
        android:id="@+id/tPingCommand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tHint"
        android:inputType="textUri"
        >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tPingPacket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tPakcetText" 
        android:textColor="@color/gray"
        />

    <EditText
        android:id="@+id/tPacketNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tHintPacket"
        android:inputType="numberSigned" >
    </EditText>

    <Button
                android:id="@+id/bPing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bText"
                 />
    
	 <View 
        android:id="@+id/first_view"
        android:layout_width="fill_parent"
		android:layout_height="2dp"
		android:background="#6E6E6E" />
    
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:background="@color/black"
        android:id="@+id/infoScroll"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" 
            android:background="@color/black"
            >

            <TextView
                android:id="@+id/tReturnResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" 
                android:textColor="@color/gray"
                />
			
            <TextView
                android:id="@+id/tConnectionResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" 
                android:textColor="@color/orange"
                android:textSize="30dip"
                android:visibility="invisible"
                />
            
        </LinearLayout>
    </ScrollView>

</LinearLayout>